added google analytics

--- a/_includes/blog_sidebar.html
+++ b/_includes/blog_sidebar.html
@@ -1,6 +1,6 @@
 <div class="col-lg-4">
     <div class="card">
-        <div class="card-header"> About {{ site.author }} </div>
+        <div class="card-header"> About </div>
         <div class="card-body text-dark">
             <!-- Your Bio -->
             <p> {{ site.author_bio }}</p>
