--- a/_layouts/about_me.html
+++ b/_layouts/about_me.html
@@ -5,7 +5,7 @@ layout: default
     <div class="row">
         <div class="col-lg-8">
             <div class="card">
-                <h1 class="card-title">About Me</h1>
+                <h1 class="card-title">About</h1>
                  {%- include author_bio.html -%}
             </div>
             <div class="card">
