--- a/_layouts/contact_me.html
+++ b/_layouts/contact_me.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="card">
-    <h1 class="card-title"> Contact Me</h1>
+    <h1 class="card-title"> Contact</h1>
    
      {%- include contact_me_form.html -%}
  </div>
