--- a/_layouts/my_projects.html
+++ b/_layouts/my_projects.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="card">
-    <h1 class="card-title"> My Projects</h1>
+    <h1 class="card-title">Projects</h1>
 
     <br />
     {%- include author_projects.html -%}
