--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,8 @@ layout: compress
 
         {%- include header.html -%}
 
+        {%- include ads.html -%}
+
         <div class="col-lg-12">
 
             {{ content }}
