added a new post

--- a/_layouts/about_me.html
+++ b/_layouts/about_me.html
@@ -8,10 +8,16 @@ layout: default
                 <h1 class="card-title">About</h1>
                  {%- include author_bio.html -%}
             </div>
+         
             <div class="card">
                 <h1 class="card-title"> Work Experience</h1>
                 <br />
                  {%- include author_work_experience.html -%}
+            </div>
+            <div class="card">
+                <h1 class="card-title"> Education </h1>
+                <br />
+                 {%- include author_education.html -%}
             </div>
         </div>
         <div class="col-lg-4">
