--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,9 +10,13 @@ layout: default
         <div class="col-lg-8">
     
            {%- include blog_post_article.html -%}
+
+           {%- include blog_post_comments.html -%}
         </div>
  
            {%- include blog_sidebar.html -%}
+
+
         
 </div> <!-- End of row-->
     
