--- a/_includes/blog_sidebar.html
+++ b/_includes/blog_sidebar.html
@@ -4,6 +4,8 @@
         <div class="card-body text-dark">
             <!-- Your Bio -->
             <p> {{ site.author_bio }}</p>
+
+            {%- include github_star_button.html -%}
         </div>
     </div>
     <div class="card">
