--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,8 +39,16 @@
 
             </div>
             <div class="col-md-6 center">
-
+                
                 <ul class="nav justify-content-end" id="navigation">
+                    {% for item in site.menus.header %}
+                      <li class="nav-item menu-item-{{ loop.index }}">
+                        <a class="nav-link" href="{{ item.url }}" title="Go to {{ item.title }}">{{ item.title }}</a>
+                      </li>
+                    {% endfor %}
+                    </ul>
+
+                <!-- <ul class="nav justify-content-end" id="navigation">
                     {%- assign default_paths = site.pages | map: "path" -%} {%- assign page_paths = site.header_pages | default: default_paths-%}
                     {%- if page_paths -%} {%- for path in page_paths -%} {%- assign my_page = site.pages | where: "path",path
                     | first -%} {%- if my_page.title -%}
@@ -49,7 +57,7 @@
                     </li>
                     {%- endif -%} {%- endfor -%}
 
-                </ul>
+                </ul> -->
 
                 {%- endif -%}
 
