added algolia and menus

--- a/_includes/blog_posts.html
+++ b/_includes/blog_posts.html
@@ -1,4 +1,14 @@
+<div class="row">
 
+    <div id="search-searchbar"></div>
+
+</div>
+<ul>
+<div class="row">
+<div id="search-hits"></div>
+</div>
+</ul>
+<!-- 
             <ul>
                     <div class="row">
                         {% for post in site.posts %}
@@ -19,4 +29,4 @@
     
                         {% endfor %}
                     </div>
-                </ul>
+                </ul> -->
