--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,16 +1,24 @@
 --- 
 layout: default 
 ---
+<div class="row">
+
+  
+</div>
 
     <div class="row">
-
+ 
         <div class="col-lg-8 col-md-4">
-
+           
                 <!-- Blog Posts -->
-            {%- include blog_posts.html -%}
-    
+            
+                {%- include blog_posts.html -%}
+
+                {%- include algolia_search.html -%}
         </div>
 
  
             {%- include blog_sidebar.html -%}
         </div>
+
+        
