--- a/_includes/blog_sidebar.html
+++ b/_includes/blog_sidebar.html
@@ -15,4 +15,10 @@
             {%- include blog_categories.html -%}
         </div>
     </div>
+    <div class="card">
+            <div class="card-header">Tags </div>
+            <div class="card-body text-dark">
+                {%- include blog_tags.html -%}
+            </div>
+        </div>
 </div>
