--- a/_sass/devlog.scss
+++ b/_sass/devlog.scss
@@ -110,9 +110,9 @@ footer {
 }
 
 .blog-post {
-    width: 350px;
+    width: auto;
     height: auto;
-    margin: 20px !important;
+    margin-left: -20px !important;
 }
 
 .responsive-table {
