--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
                 </a>
             </div>
           
-            <div class="col-md-4">
+            <div class="col-md-4 center">
                 <h1 class="profile-name"> {{ site.title }}</h1>
                 <p class="profile-bio"> {{ site.subtitle }}</p>
                 <p class="profile-links">
