--- a/_includes/head.html
+++ b/_includes/head.html
@@ -45,6 +45,14 @@
           fjs.parentNode.insertBefore(js, fjs)
       }(document, "script", "dhm"))
   </script>
+  <!-- Google Adsense -->
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-7259836434848202",
+          enable_page_level_ads: true
+     });
+</script>
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
