about_me page changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,44 +12,70 @@
                 <h1 class="profile-name"> {{ site.title }}</h1>
                 <p class="profile-bio"> {{ site.subtitle }}</p>
                 <p class="profile-links">
+                    {% if site.twitter_username %}
                     <a class="social-link" href="http://twitter.com/{{ site.twitter_username }}">
                         <i class="fab fa-twitter"></i>
                     </a>
+                    {% endif %}
+                    {% if site.facebook_username %}
                     <a class="social-link" href="http://facebook.com/{{ site.facebook_username }}">
                         <i class="fab fa-facebook-f"></i>
                     </a>
+                    {% endif %}
+                    {% if site.instagram_username %}
                     <a class="social-link" href="http://instagram.com/{{ site.instagram_username }}">
                         <i class="fab fa-instagram"></i>
                     </a>
+                    {% endif %}
+                    {% if site.medium_username %}
                     <a class="social-link" href="http://medium.com/@{{ site.medium_username }}">
                         <i class="fab fa-medium-m"></i>
                     </a>
+                    {% endif %}
+                    {% if site.github_username %}
                     <a class="social-link" href="http://github.com/{{ site.github_username }}">
                         <i class="fab fa-github"></i>
                     </a>
+                    {% endif %}
+                    {% if site.behance_username %}
                     <a class="social-link" href="http://behance.net/{{ site.behance_username }}">
                         <i class="fab fa-behance"></i>
                     </a>
+                    {% endif %}
+                    {% if site.linkedin_username %}
                     <a class="social-link" href="http://linkedin.com/in/{{ site.linkedin_username }}">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
+                    {% endif %}
+                    {% if site.telegram_username %}
                     <a class="social-link" href="http://t.me/{{ site.telegram_username }}">
                         <i class="fab fa-telegram-plane"></i>
                     </a>
+                    {% endif %}
                 </p>
 
             </div>
             <div class="col-md-6 center">
                 
-                <ul class="nav justify-content-end" id="navigation">
+                <!-- Jekyll Menus 
+                    
+                    <ul class="nav justify-content-end" id="navigation">
                     {% for item in site.menus.header %}
                       <li class="nav-item menu-item-{{ loop.index }}">
                         <a class="nav-link" href="{{ item.url }}" title="Go to {{ item.title }}">{{ item.title }}</a>
                       </li>
                     {% endfor %}
                     </ul>
+                     -->
 
-                <!-- <ul class="nav justify-content-end" id="navigation">
+                    <ul class="nav justify-content-end" id="navigation">
+                    {% for i in site.urls %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ i.url }}">{{ i.text }}</a>
+                    </li>
+                     {% endfor %}
+                    </ul>
+                 <!-- <ul class="nav justify-content-end" id="navigation">
                     {%- assign default_paths = site.pages | map: "path" -%} {%- assign page_paths = site.header_pages | default: default_paths-%}
                     {%- if page_paths -%} {%- for path in page_paths -%} {%- assign my_page = site.pages | where: "path",path
                     | first -%} {%- if my_page.title -%}
@@ -58,9 +84,10 @@
                     </li>
                     {%- endif -%} {%- endfor -%}
 
-                </ul> -->
+                </ul>  
 
                 {%- endif -%}
+                -->
 
             </div>
         </div>
