--- a/_includes/blog_tags.html
+++ b/_includes/blog_tags.html
@@ -1,7 +1,7 @@
 {% for tag in site.tags %} {% capture tag_name %}{{ tag | first }}{% endcapture %}
 <div id="#{{ tag_name | slugize }}"></div>
 <li class="tag-head">
-    <a href="{{ site.baseurl }}/blog/categories/{{ tag_name }}">{{ tag_name }}</a>
+    <a href="{{ site.baseurl }}/blog/tags/{{ tag_name }}">{{ tag_name }}</a>
 </li>
 <a name="{{ tag_name | slugize }}"></a>
 
