--- a/_layouts/about_me.html
+++ b/_layouts/about_me.html
@@ -4,23 +4,60 @@ layout: default
 
     <div class="row">
         <div class="col-lg-8">
+        
+            {% if site.author_bio %}
             <div class="card">
                 <h1 class="card-title">About</h1>
-                 {%- include author_bio.html -%}
-
-                 
+                <p> {{ site.author_bio }}</p>
             </div>
-         
+            {% endif %}
+
+            {% if site.show_author_work_experiences == true %}
             <div class="card">
                 <h1 class="card-title"> Work Experience</h1>
                 <br />
-                 {%- include author_work_experience.html -%}
+                {% for exp in site.author_work_experiences %}
+                {% if exp.visibility == true %}
+                <div class="row">
+                        <div class="col-md-2">
+                            <img src="/assets/img/{{ exp.company_logo }}" class="company-logo" />
+                        </div>
+                        <div class="col-md-6">
+                            <h4 class="experience-title"> {{ exp.designation }}</h4>
+                            <h6 class="experience-info"> {{ exp.company_name}}</h6>
+                            <p class="experience-desc"> {{ exp.description }} </p>
+                            <p><a href="{{exp.company_url}}">{{ exp.company_url}}</a></p> 
+                        </div>
+                    </div>
+                    {% endif %}
+                    
+                    {% endfor %}  
             </div>
+            {% endif %}
+
+
+            {% if site.show_author_education_details == true %}
             <div class="card">
                 <h1 class="card-title"> Education </h1>
                 <br />
-                 {%- include author_education.html -%}
+                {% for detail in site.author_education_details %}
+                {% if detail.visibility == true %}
+                <div class="row">
+                        <div class="col-md-2">
+                            <img src="/assets/img/{{ detail.college_logo}}" class="company-logo" />
+                        </div>
+                        <div class="col-md-6">
+                            <h4 class="experience-title"> {{detail.college_degree }}</h4>
+                            <h6 class="experience-info">{{detail.college_name}}</h6>
+                            <p class="experience-desc"> {{detail.description}} </p>
+                            <p><a href="{{detail.college_url}}">{{ detail.college_url}}</a></p>                    
+                        </div>
+                    </div>
+                    {% endif %}
+                    
+                    {% endfor %}  
             </div>
+            {% endif %}
         </div>
         <div class="col-lg-4">
     
