--- a/_layouts/about_me.html
+++ b/_layouts/about_me.html
@@ -12,6 +12,30 @@ layout: default
             </div>
             {% endif %}
 
+
+            {% if site.show_author_project_details == true %}
+            <div class="card">
+                <h1 class="card-title">Projects</h1>
+                <br />
+                {% for project in site.author_project_details %}
+                {% if project.visibility == true %}
+                <div class="row">
+                        <div class="col-md-2">
+                            <img src="/assets/img/{{project.project_thumbnail}}" class="company-logo" />
+                        </div>
+                        <div class="col-md-6">
+                            <h4 class="experience-title"> {{ project.project_title }}</h4>
+                            <h6 class="experience-info"> {{ project.project_info}}</h6>
+                            <p class="experience-desc"> {{ project.project_description }} </p>
+                            <p><a href="{{exp.company_url}}">{{ project.project_url}}</a></p> 
+                        </div>
+                    </div>
+                    {% endif %}
+                    
+                    {% endfor %}  
+            </div>
+            {% endif %}
+
             {% if site.show_author_work_experiences == true %}
             <div class="card">
                 <h1 class="card-title"> Work Experience</h1>
@@ -58,6 +82,7 @@ layout: default
                     {% endfor %}  
             </div>
             {% endif %}
+
         </div>
         <div class="col-lg-4">
     
