--- a/_includes/coding_activity.html
+++ b/_includes/coding_activity.html
@@ -2,10 +2,10 @@
 
 <!-- Pie Chart -->
 <figure>
-    <embed src="https://wakatime.com/share/@sujaykundu777/f540df00-f2d1-46e2-a360-da7e13ed8a66.svg"></embed>
+    <embed src="https://wakatime.com/share/@{{site.wakatime_username }}/f540df00-f2d1-46e2-a360-da7e13ed8a66.svg"></embed>
 </figure>
 
 <!-- Hours Coded -->
 <figure>
-    <embed src="https://wakatime.com/share/@sujaykundu777/1550a9f1-d41a-4745-92a0-181a6fbb2456.svg"></embed>
+    <embed src="https://wakatime.com/share/@{{site.wakatime_username }}/1550a9f1-d41a-4745-92a0-181a6fbb2456.svg"></embed>
 </figure>
