--- a/_layouts/about_me.html
+++ b/_layouts/about_me.html
@@ -87,17 +87,19 @@ layout: default
         <div class="col-lg-4">
     
             <div class="card">
-    
-                <h6>
-                    <i class="fas fa-map-marker-alt"></i> {{ site.author_location }}</h6>
-                <h6>
-                    <i class="fas fa-envelope"></i> {{ site.author_email }}</h6>
-                <h6>
-                    <i class="fas fa-link"></i> {{ site.author_website_url }} </h6>
-
+                {% if site.author_location %} 
+                <h6>  <i class="fas fa-map-marker-alt"></i> {{ site.author_location }}</h6>
+                {% endif %}
+                {% if site.author_email %}
+                <h6><i class="fas fa-envelope"></i> {{ site.author_email }}</h6>
+                {% endif %}
+                {% if site.author_website_url %}
+                <h6> <i class="fas fa-link"></i> {{ site.author_website_url }} </h6>
+                {% endif %}
+<!-- 
                     {%- include github_follow_button.html -%}
         
-                    {%- include twitter_follow_button.html -%}
+                    {%- include twitter_follow_button.html -%} -->
                
     
             </div>
@@ -109,12 +111,14 @@ layout: default
                
             </div>
     
+            {% if site.wakatime_username %}
             <div class="card">
                 <h1> Coding Activity </h1>
-    
+                
                 {%- include coding_activity.html -%}
     
             </div>
+            {% endif %}
     
         </div>
         </div>
