--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="card-body" itemprop="articleBody">
-        <img class="card-img-top" src="/assets/img/{{ page.thumbnail }}" alt="{{ post.title }}"> 
+        <img class="card-img-top" src="/assets/img/posts/{{ page.thumbnail }}" alt="{{ post.title }}"> 
         <br/> <br/>
         {{ content }} 
     </div>
