--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
 
   
   <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/custom-style.css" />
 
   <link rel="icon" href="/assets/img/favicon.ico" type="image/gif" sizes="16x16">
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
