--- a/_includes/github_follow_button.html
+++ b/_includes/github_follow_button.html
@@ -1,2 +1,2 @@
 <!-- Place this tag where you want the button to render. -->
-<a class="github-button" href="https://github.com/sujaykundu777" data-size="large" data-show-count="true" aria-label="Follow @sujaykundu777 on GitHub">Follow @sujaykundu777</a>
+<a class="github-button" href="https://github.com/{{site.github_username}}" data-size="large" data-show-count="true" aria-label="Follow @{{site.github_username}} on GitHub">Follow @{{ site.github_username }}</a>
