--- a/_layouts/about_me.html
+++ b/_layouts/about_me.html
@@ -90,15 +90,18 @@ layout: default
                 {% if site.author_location %} 
                 <h6>  <i class="fas fa-map-marker-alt"></i> {{ site.author_location }}</h6>
                 {% endif %}
+                
                 {% if site.author_email %}
                 <h6><i class="fas fa-envelope"></i> {{ site.author_email }}</h6>
                 {% endif %}
+                
                 {% if site.author_website_url %}
                 <h6> <i class="fas fa-link"></i> {{ site.author_website_url }} </h6>
                 {% endif %}
                 
-
-                 {%- include github_follow_button.html -%} 
+                {% if site.github_username %}
+                  {%- include github_follow_button.html -%} 
+                {% endif %}
 
                 {% if site.twitter_username %}
                   {%- include twitter_follow_button.html -%} 
