--- a/_layouts/search.html
+++ b/_layouts/search.html
@@ -2,6 +2,21 @@
 layout: default 
 ---
 
+<div class="row">
+        <div class="col-lg-12">
+    
+    <div id="search-searchbar"></div>
+        </div>
+</div>
+<ul>
+<div class="row">
+        <div class="col-lg-12">
+    
+        <div id="search-hits"></div>
+        </div>
+</ul>
+
+
  {%- include algolia_search.html -%}
 
  
