--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,4 +23,6 @@ layout: compress
     </div>
 </body>
 
+<div hidden id="snipcart" data-api-key="Y2I1NTAyNWYtMTNkMy00ODg0LWE4NDItNTZhYzUxNzJkZTI5NjM3MDI4NTUzNzYyMjQ4NzU0"></div>
+<script src="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.js" defer></script>
 </html>
