removing imgs from gem

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
     href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
   <link rel="stylesheet" type="text/css"
     href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch-theme-algolia.min.css">
-  <script>
+  <!-- <script>
     (function (d, h, m) {
       var js, fjs = d.getElementsByTagName(h)[0];
       if (d.getElementById(m)) { return; }
@@ -41,7 +41,7 @@
       js.src = "https://makerwidget.com/js/embed.js";
       fjs.parentNode.insertBefore(js, fjs)
     }(document, "script", "dhm"))
-  </script>
+  </script> -->
 
   {% if jekyll.environment == "production" %}
 
