--- a/_includes/blog_post_breadcrumb.html
+++ b/_includes/blog_post_breadcrumb.html
@@ -1,10 +1,10 @@
 <nav aria-label="breadcrumb" role="navigation">
         <ol class="breadcrumb">
             <li class="breadcrumb-item">
-                <a href="/blog">Blog</a>
+                <a href="{{site.url}}{{site.baseurl}}/blog">Blog</a>
             </li>
             <li class="breadcrumb-item">
-                <a href="/blog/categories">Categories</a>
+                <a href="{{site.url}}{{site.baseurl}}/blog/categories">Categories</a>
             </li>
             <li class="breadcrumb-item active" aria-current="page">{{ page.title }}</li>
         </ol>
