--- a/_includes/product_definition.html
+++ b/_includes/product_definition.html
@@ -4,7 +4,7 @@
  data-item-name="{{ product.name }}"
  data-item-price="{{ product.price }}"
  data-item-image="{{ product.image }}"
- data-item-url="https://devlopr.netlify.com{{ page.url }}"
+ data-item-url="{{site.url}}{{site.baseurl}}{{ page.url }}"
  data-item-description="{{ product.content | remove: '<p>' | remove: '</p>' }}">
  Add to cart (${{ product.price }})
 </button>
