--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,10 +1,10 @@
---- 
-layout: default 
+---
+layout: default
 ---
 
     <div class="row">
         <div class="col-lg-8">
-        
+
             {% if site.author_bio %}
             <div class="card">
                 <h1 class="card-title">About</h1>
@@ -21,18 +21,18 @@ layout: default
                 {% if project.visibility == true %}
                 <div class="row">
                         <div class="col-md-2">
-                            <img src="/assets/img/{{project.project_thumbnail}}" class="company-logo" />
+                            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}" class="company-logo" />
                         </div>
                         <div class="col-md-6">
                             <h4 class="experience-title"> {{ project.project_title }}</h4>
                             <h6 class="experience-info"> {{ project.project_info}}</h6>
                             <p class="experience-desc"> {{ project.project_description }} </p>
-                            <p><a href="{{exp.company_url}}">{{ project.project_url}}</a></p> 
+                            <p><a href="{{exp.company_url}}">{{ project.project_url}}</a></p>
                         </div>
                     </div>
                     {% endif %}
-                    
-                    {% endfor %}  
+
+                    {% endfor %}
             </div>
             {% endif %}
 
@@ -44,18 +44,18 @@ layout: default
                 {% if exp.visibility == true %}
                 <div class="row">
                         <div class="col-md-2">
-                            <img src="/assets/img/{{ exp.company_logo }}" class="company-logo" />
+                            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ exp.company_logo }}" class="company-logo" />
                         </div>
                         <div class="col-md-6">
                             <h4 class="experience-title"> {{ exp.designation }}</h4>
                             <h6 class="experience-info"> {{ exp.company_name}}</h6>
                             <p class="experience-desc"> {{ exp.description }} </p>
-                            <p><a href="{{exp.company_url}}">{{ exp.company_url}}</a></p> 
+                            <p><a href="{{exp.company_url}}">{{ exp.company_url}}</a></p>
                         </div>
                     </div>
                     {% endif %}
-                    
-                    {% endfor %}  
+
+                    {% endfor %}
             </div>
             {% endif %}
 
@@ -68,62 +68,62 @@ layout: default
                 {% if detail.visibility == true %}
                 <div class="row">
                         <div class="col-md-2">
-                            <img src="/assets/img/{{ detail.college_logo}}" class="company-logo" />
+                            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ detail.college_logo}}" class="company-logo" />
                         </div>
                         <div class="col-md-6">
                             <h4 class="experience-title"> {{detail.college_degree }}</h4>
                             <h6 class="experience-info">{{detail.college_name}}</h6>
                             <p class="experience-desc"> {{detail.description}} </p>
-                            <p><a href="{{detail.college_url}}">{{ detail.college_url}}</a></p>                    
+                            <p><a href="{{detail.college_url}}">{{ detail.college_url}}</a></p>
                         </div>
                     </div>
                     {% endif %}
-                    
-                    {% endfor %}  
+
+                    {% endfor %}
             </div>
             {% endif %}
 
         </div>
         <div class="col-lg-4">
-    
+
             <div class="card">
-                {% if site.author_location %} 
+                {% if site.author_location %}
                 <h6>  <i class="fas fa-map-marker-alt"></i> {{ site.author_location }}</h6>
                 {% endif %}
-                
+
                 {% if site.author_email %}
                 <h6><i class="fas fa-envelope"></i> {{ site.author_email }}</h6>
                 {% endif %}
-                
+
                 {% if site.author_website_url %}
                 <h6> <i class="fas fa-link"></i> {{ site.author_website_url }} </h6>
                 {% endif %}
-                
+
                 {% if site.github_username %}
-                  {%- include github_follow_button.html -%} 
+                  {%- include github_follow_button.html -%}
                 {% endif %}
 
                 {% if site.twitter_username %}
-                  {%- include twitter_follow_button.html -%} 
+                  {%- include twitter_follow_button.html -%}
                 {% endif %}
-    
+
             </div>
-    
+
             <div class="card">
                 <h1> Skills </h1>
 
                 {%- include author_skills.html -%}
-               
+
             </div>
-    
+
             {% if site.wakatime_username %}
             <div class="card">
                 <h1> Coding Activity </h1>
-                
+
                 {%- include coding_activity.html -%}
-    
+
             </div>
             {% endif %}
-    
+
         </div>
         </div>
