--- a/_includes/blog_post_article.html
+++ b/_includes/blog_post_article.html
@@ -3,13 +3,13 @@
         <!-- <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1> -->
         <h4 class="post-meta">{{ page.summary }}</h4>
         <p class="post-summary">Posted by : {% if page.author %}
-            <img src="/assets/img/{{ site.author_logo }}" class="author-profile-img">
+            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ site.author_logo }}" class="author-profile-img">
             <span itemprop="author" itemscope itemtype="http://schema.org/Person">
                 <span itemprop="name">{{ page.author }}</span>
             </span>{% endif %} at
             <time datetime="{{ page.date }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>
         </p>
-        <span class="disqus-comment-count" data-disqus-identifier="{{ page.url }}"></span>     
+        <span class="disqus-comment-count" data-disqus-identifier="{{ page.url }}"></span>
         <div class="post-categories">
             {% if post %} {% assign categories = post.categories %} {% else %} {% assign categories = page.categories %} {% endif %}
             Category : {% for category in categories %}
@@ -19,9 +19,9 @@
     </div>
 
     <div class="card-body" itemprop="articleBody">
-        <img class="card-img-top" src="/assets/img/posts/{{ page.thumbnail }}" alt="{{ post.title }}"> 
+        <img class="card-img-top" src="{{site.url}}{{site.baseurl}}/assets/img/posts/{{ page.thumbnail }}" alt="{{ post.title }}">
         <br/> <br/>
-        {{ content }} 
+        {{ content }}
     </div>
 
     <div id="disqus_thread"></div>
