--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,11 @@
     <div class="col-lg-12">
         <div class="row">
             <div class="col-md-2 center">
-                <a href="/">
-                    <img src="/assets/img/{{ site.author_logo }}" class="profile-img">
+                <a href="{{site.url}}{{site.baseurl}}/">
+                    <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ site.author_logo }}" class="profile-img">
                 </a>
             </div>
-          
+
             <div class="col-md-4" id="author_details">
                 <h1 class="profile-name"> {{ site.title }}</h1>
                 <p class="profile-bio"> {{ site.subtitle }}</p>
@@ -56,15 +56,15 @@
 
             </div>
             <div class="col-md-6 center">
-     
+
                     <ul class="nav justify-content-end" id="navigation">
                     {% for i in site.urls %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ i.url }}">{{ i.text }}</a>
+                        <a class="nav-link" href="{{ site.url}}{{site.baseurl}}{{ i.url }}">{{ i.text }}</a>
                     </li>
                      {% endfor %}
                      <li class="nav-item">
-                         <a class="nav-link" href="{{ site.url}}/search/"><i class="fa fa-search" aria-hidden="true"></i></a>
+                         <a class="nav-link" href="{{ site.url}}{{site.baseurl}}/search/"><i class="fa fa-search" aria-hidden="true"></i></a>
                      </li>
                      <li class="nav-item">
                          <button class="header__checkout snipcart-checkout">
@@ -79,7 +79,7 @@
                               </button>
                         </li>
                     </ul>
-      
+
             </div>
         </div>
     </div>
