--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -1,19 +1,19 @@
---- 
-layout: default 
+---
+layout: default
 ---
 
     <div class="row">
- 
+
         <div class="col-lg-8 col-md-4">
-           
+
                 <!-- Blog Posts -->
              <ul >
                 <div class="row">
                     {% for post in paginator.posts %}
                     <div class="card blog-post">
-                        <img class="card-img-top" src="/assets/img/posts/{{ post.thumbnail }}" alt="{{ post.title }}">
+                        <img class="card-img-top" src="{{site.url}}{{site.baseurl}}/assets/img/posts/{{ post.thumbnail }}" alt="{{ post.title }}">
                         <div class="card-body center">
-                            <img src="/assets/img/{{ site.author_logo }}" class="author-profile-img">
+                            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ site.author_logo }}" class="author-profile-img">
                             <h4 class="card-title">{{ post.title }}</h4>
 
                             <h6 class="card-subtitle mb-2 text-muted">{{ post.date | date: "%b %-d, %Y" }}</h6>
@@ -27,7 +27,7 @@ layout: default
 
                     {% endfor %}
                 </div>
-            </ul> 
+            </ul>
 
 
       <div class="row center">
@@ -39,9 +39,9 @@ layout: default
             {% else %}
               <li class="disabled"><span aria-hidden="true">&laquo;</span></li>
             {% endif %}
-      
+
             <li><a href="/">First</a></li>
-      
+
             {% for page in (1..paginator.total_pages) %}
               {% if page == paginator.page %}
                 <li class="active"><a>{{ page }}<span class="sr-only">(current)</span></a></li>
@@ -51,9 +51,9 @@ layout: default
                 <li><a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a></li>
               {% endif %}
             {% endfor %}
-      
+
             <li><a href="/page/{{ paginator.total_pages }}/">Last</a></li>
-      
+
             {% if paginator.next_page %}
               <li><a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">&raquo;</a></li>
             {% else %}
@@ -62,11 +62,10 @@ layout: default
           </ul>
         {% endif %}
     </div>
-        
+
 </div>
 
 
             {%- include blog_sidebar.html -%}
         </div>
 
-        
