--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,10 +13,14 @@ layout: compress
         {%- include header.html -%}
 
         <div class="col-lg-12">
-          
+
             {{ content }}
 
         </div>
+
+         <div class="col-lg-12" id="newsletter_footer">
+               {%- include blog_newsletter.html -%}
+         </div>
 
         {%- include footer.html -%}
 
