--- a/_includes/blog_newsletter.html
+++ b/_includes/blog_newsletter.html
@@ -1,10 +1,6 @@
-<!-- Mailchimp Newleter -->
+<!-- Mailchimp Newletters -->
 <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us10.list-manage.com","uuid":"50bab1c85eae24ecfb0f68361","lid":"3a2dd721d0","uniqueMethods":true}) })</script>
-
-<!--Subscribe Our Newsletter Form -->
-<!-- Replace the url with your mailchimp form url-->
-<form action="https://programmingebooks.us10.list-manage.com/subscribe/post?u=50bab1c85eae24ecfb0f68361&amp;id=3a2dd721d0"
-method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+<form action="{{site.mailchimp_form_url}}"method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
 <div id="mc_embed_signup_scroll_footer">
     <label for="mce-EMAIL_footer"> Signup for Weekly Email Newsletters :D</label>
     <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL_footer" placeholder="email address" required>
@@ -13,7 +9,6 @@ method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" 
         <input type="text" name="b_50bab1c85eae24ecfb0f68361_3a2dd721d0" tabindex="-1" value="">
     </div><br />
     <div class="clear">
-
         <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe_footer" class="btn btn-lg btn-success">
     </div>
 </div>
