--- a/_sass/devlog.scss
+++ b/_sass/devlog.scss
@@ -74,7 +74,7 @@ header {
 }
 
 /* image-gallery */
-#image-gallery{
+#imageGallery{
     margin-left: 5%;
     margin-top: 30px;
     margin-bottom: 30px;
