changes in head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -87,9 +87,8 @@
   <script src="{{site.url}}/bower_components/jquery/dist/jquery.min.js"></script>
   <script src="{{site.url}}/bower_components/jquery.easing/jquery.easing.min.js"></script>
   <script src="{{site.url}}/bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="{{site.url}}/assets/js/custom.min.js"></script>
-   <script src="{{site.url}}/bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/combine/npm/lightgallery,npm/lg-autoplay,npm/lg-fullscreen,npm/lg-hash,npm/lg-pager,npm/lg-share,npm/lg-thumbnail,npm/lg-video,npm/lg-zoom"></script>
+  <script src="{{site.url}}/bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
+  <script src="{{site.url}}/bower_components/lightgallery/dist/js/lightgallery-all.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.2/picturefill.min.js"></script>
   <script src="{{site.url}}/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
 
