--- a/_includes/head.html
+++ b/_includes/head.html
@@ -82,14 +82,14 @@
     integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous"> -->
 
 
-  <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/main.css" />
-  <link rel="stylesheet" href="{{site.url}}{{site.baseurl}}/assets/css/custom-style.css" />
-  <link rel="stylesheet" href="{{site.url}}/assets/bower_components/lightgallery/dist/css/lightgallery.min.css"/>
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/custom-style.css" />
+  <link rel="stylesheet" href="/assets/bower_components/lightgallery/dist/css/lightgallery.min.css"/>
   <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.css" />
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.css">
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch-theme-algolia.min.css">
- <link rel="stylesheet" href="{{site.url}}/assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="{{site.url}}/assets/bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css" />
+ <link rel="stylesheet" href="/assets/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="/assets/bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css" />
   <!-- Fonts-->
   <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
 
@@ -97,13 +97,13 @@
   <link rel="icon" href="{{site.url}}{{site.baseurl}}/assets/img/favicon.ico" type="image/gif" sizes="16x16">
 
   <!-- Jquery -->
-  <script src="{{site.url}}/assets/bower_components/jquery/dist/jquery.min.js"></script>
-  <script src="{{site.url}}/assets/bower_components/jquery.easing/jquery.easing.min.js"></script>
-  <script src="{{site.url}}/assets/bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="{{site.url}}/assets/bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
-  <script src="{{site.url}}/assets/bower_components/lightgallery/dist/js/lightgallery-all.min.js"></script>
+  <script src="/assets/bower_components/jquery/dist/jquery.min.js"></script>
+  <script src="/assets/bower_components/jquery.easing/jquery.easing.min.js"></script>
+  <script src="/assets/bower_components/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/assets/bower_components/jquery-mousewheel/jquery.mousewheel.min.js"></script>
+  <script src="/assets/bower_components/lightgallery/dist/js/lightgallery-all.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/picturefill/3.0.2/picturefill.min.js"></script>
-  <script src="{{site.url}}/assets/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
+  <script src="/assets/bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
  <script src="https://cdn.jsdelivr.net/npm/instantsearch.js@2.6.0/dist/instantsearch.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
 
