--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,8 +3,8 @@
     <div class="col-lg-12">
         <div class="row">
             <div class="col-md-2 center">
-                <a href="{{site.url}}{{site.baseurl}}/">
-                    <img src="{{site.url}}{{site.baseurl}}/assets/img/{{ site.author_logo }}" class="profile-img">
+                <a href="/">
+                    <img src="/assets/img/{{ site.author_logo }}" class="profile-img">
                 </a>
             </div>
 
