added dark mode

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,9 +2,8 @@
 layout: default
 ---
 
-    <div class="row">
-        <div class="col-lg-8">
-
+    <div class="row offset-md-1">
+        <div class="col-lg-7">
             {% if site.author_bio %}
             <div class="card">
                 <h1 class="card-title">About</h1>
@@ -14,16 +13,16 @@ layout: default
 
 
             {% if site.show_author_project_details == true %}
-            <div class="card">
+            <div id="author_projects" class="card">
                 <h1 class="card-title">Projects</h1>
                 <br />
                 {% for project in site.author_project_details %}
                 {% if project.visibility == true %}
                 <div class="row">
-                        <div class="col-md-2">
-                            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}" class="company-logo" />
-                        </div>
                         <div class="col-md-6">
+                            <img src="{{site.url}}{{site.baseurl}}/assets/img/{{project.project_thumbnail}}" class="project-img" />
+                        </div>
+                        <div class="col-md-4 center">
                             <h4 class="experience-title"> {{ project.project_title }}</h4>
                             <h6 class="experience-info"> {{ project.project_info}}</h6>
                             <p class="experience-desc"> {{ project.project_description }} </p>
