--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,15 +13,12 @@ layout: compress
         {%- include header.html -%}
 
         <div class="col-lg-12">
-
             {{ content }}
 
-        </div>
-
-         <div class="col-lg-12" id="newsletter_footer">
+         <div class="row" id="newsletter_footer">
                {%- include blog_newsletter.html -%}
          </div>
-
+        </div>
         {%- include footer.html -%}
 
     </div>
@@ -29,4 +26,5 @@ layout: compress
 
 <div hidden id="snipcart" data-api-key="Y2I1NTAyNWYtMTNkMy00ODg0LWE4NDItNTZhYzUxNzJkZTI5NjM3MDI4NTUzNzYyMjQ4NzU0"></div>
 <script src="https://cdn.snipcart.com/themes/v3.0.0-beta.3/default/snipcart.js" defer></script>
+<script src="/assets/js/mode-switcher.js"></script>
 </html>
