--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -102,9 +102,9 @@ html[data-theme="light"] {
     padding: 0;
 }
 
-*+* {
-    margin-top: 1.5em;
-}
+// *+* {
+//     margin-top: 1.5em;
+// }
 
 body {
     background-color: var(--main-background-color) !important;
@@ -155,6 +155,13 @@ header {
         height: 150px;
         margin-left: 20px;
     }
+    .profile-name {
+        margin-top: 20px;
+    }
+    .profile-bio,
+    .profile-links {
+        margin-top: 5px;
+    }
     .social-link {
         color: var(--social-link-color);
         font-size: 15px;
@@ -162,9 +169,16 @@ header {
         margin: 2px;
         text-decoration: none !important;
     }
+    #header-nav{
+        float: right;
+        margin-inline-start: 100px;
+    }
+    #navigation{
+        margin-top:50px;
+    }
     .nav-link {
         font-size: 15px !important;
-        color: #000;
+        color: var(--main-text-color);
         font-weight: 600;
     }
 
